--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -17,7 +17,7 @@ kind: Config
 metadata:
   name: app
 build:
-  platforms: ["linux/arm64"]
+  platforms: ["linux/amd64", "linux/arm64"]
   artifacts:
   # image tags are relative; to specify an image repo (e.g. GCR), you
   # must provide a "default repo" using one of the methods described
@@ -47,8 +47,6 @@ build:
     context: src/frontend
   - image: adservice
     context: src/adservice
-  - image: giftwrappingservice
-    context: src/giftwrappingservice
   tagPolicy:
     gitCommit: {}
   local:
@@ -103,7 +101,7 @@ requires:
 - configs:
   - app
 build:
-  platforms: ["linux/arm64"]
+  platforms: ["linux/amd64", "linux/arm64"]
   artifacts:
   - image: loadgenerator
     context: src/loadgenerator
