removed changes from cartservice for gcc

--- a/src/cartservice/src/Dockerfile
+++ b/src/cartservice/src/Dockerfile
@@ -21,8 +21,11 @@ RUN dotnet restore cartservice.csproj \
     -a $TARGETARCH
 COPY . .
 RUN dotnet publish cartservice.csproj \
+    -p:PublishSingleFile=true \
     -a $TARGETARCH \
     --self-contained true \
+    -p:PublishTrimmed=true \
+    -p:TrimMode=full \
     -c release \
     -o /cartservice
 
