--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -99,6 +99,7 @@ jobs:
         kubectl config set-context --current --namespace=$NAMESPACE
         kubectl wait --for=condition=available --timeout=1000s deployment/redis-cart
         kubectl wait --for=condition=available --timeout=1000s deployment/adservice
+        kubectl wait --for=condition=available --timeout=1000s deployment/giftwrappingservice
         kubectl wait --for=condition=available --timeout=1000s deployment/cartservice
         kubectl wait --for=condition=available --timeout=1000s deployment/checkoutservice
         kubectl wait --for=condition=available --timeout=1000s deployment/currencyservice
