--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -70,6 +70,17 @@ adService:
       cpu: 300m
       memory: 300Mi
 
+giftWrappingService:
+  create: true
+  name: giftwrappingservice
+  resources:
+    requests:
+      cpu: 200m
+      memory: 180Mi
+    limits:
+      cpu: 300m
+      memory: 300Mi
+
 cartService:
   create: true
   name: cartservice
