--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -990,15 +990,12 @@ spec:
   selector:
     matchLabels:
       app: giftwrappingservice
-  
   template:
     metadata:
       labels:
         app: giftwrappingservice
-    
     spec:
       serviceAccountName: giftwrappingservice
-  
       terminationGracePeriodSeconds: 5
       securityContext:
         fsGroup: 1000
@@ -1014,13 +1011,12 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: giftwrappingservice
-    
+        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/giftwrappingservice:v0.10.4
         ports:
-        - containerPort: 9555
+        - containerPort: 9600
         env:
         - name: PORT
-          value: "9555"
+          value: "9600"
         resources:
           requests:
             cpu: 200m
@@ -1045,16 +1041,14 @@ metadata:
   name: giftwrappingservice
   labels:
     app: giftwrappingservice
-
 spec:
   type: ClusterIP
   selector:
     app: giftwrappingservice
-
   ports:
   - name: grpc
-    port: 9600
-    targetPort: 9600
+    port: 9555
+    targetPort: 9555
 ---
 apiVersion: v1
 kind: ServiceAccount
