fixed image pull policy for gift service

--- a/kubernetes-manifests/giftwrappingservice.yaml
+++ b/kubernetes-manifests/giftwrappingservice.yaml
@@ -44,6 +44,7 @@ spec:
           privileged: false
           readOnlyRootFilesystem: true
         image: giftwrappingservice
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9600
         env:
