--- a/kubernetes-manifests/kustomization.yaml
+++ b/kubernetes-manifests/kustomization.yaml
@@ -25,6 +25,7 @@ resources:
  - paymentservice.yaml
  - productcatalogservice.yaml
  - recommendationservice.yaml
+ - giftwrappingservice.yaml
  - shippingservice.yaml
 # components:
 # - ../kustomize/components/cymbal-branding
