added remote image for gift service

--- a/kubernetes-manifests/adservice.yaml
+++ b/kubernetes-manifests/adservice.yaml
@@ -86,3 +86,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: adservice
+
+
+PROJECT_ID=micro-service-gruppe1
+REGION=europe-west3
+REPO=cse-microservice-boutique
+IMAGE=giftwrappingservice
+TAG=v1
+
+docker push \
+  $REGION-docker.pkg.dev/$PROJECT_ID/$REPO/$IMAGE:$TAG \
+  .
