--- a/kustomize/base/giftwrappingservice.yaml
+++ b/kustomize/base/giftwrappingservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/giftwrappingservice:v0.10.4
+        image: europe-west3-docker.pkg.dev/micro-service-gruppe1/cse-microservice-boutique/giftwrappingservice:v1
         ports:
         - containerPort: 9600
         env:
