--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,21 @@
 stages:
   - test
+  - deploy
 
 variables:
   GO_VERSION: "1.25"
+  GKE_CLUSTER: gitlab-runner-cluster
+  GKE_ZONE: europe-west10-b
+  GCP_PROJECT: cse-gr1
 
 .default_go_job:
   image: golang:${GO_VERSION}
   before_script:
     - go version
 
+# -------------------------
+# Unit tests
+# -------------------------
 unit-tests:
   stage: test
   extends: .default_go_job
@@ -28,4 +35,36 @@ unit-tests:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: '$CI_COMMIT_BRANCH == "main"'
+
+# -------------------------
+# Deploy to GKE on git tag
+# -------------------------
+deploy-production:
+  stage: deploy
+  image: google/cloud-sdk:alpine
+  tags:
+    - cse-gr1-runner
+  rules:
+    - if: '$CI_COMMIT_TAG'
+  script:
+    - echo "Deploying tag $CI_COMMIT_TAG"
+
+    # Authenticate to GCP
+    - echo "$GCP_SERVICE_KEY" | base64 -d > gcp-key.json
+    - gcloud auth activate-service-account --key-file=gcp-key.json
+    - gcloud config set project $GCP_PROJECT
+
+    # Get cluster credentials
+    - gcloud container clusters get-credentials $GKE_CLUSTER \
+        --zone $GKE_ZONE \
+        --project $GCP_PROJECT
+
+    # (Optional but recommended) pin image versions to tag
+    # - sed -i "s/:latest/:$CI_COMMIT_TAG/g" release/kubernetes-manifests.yaml
+
+    # Deploy
+    - kubectl apply -f release/kubernetes-manifests.yaml
+
+  environment:
+    name: production
 
